# UNO-Project

./: .gitignore  CMakeLists.txt  Makefile  README.md  card.cpp  card.h  deck.cpp  deck.h  ellipse.cpp  ellipse.h  gameplay.cpp  gameplay.h  gamewindow.cpp  gamewindow.h  main.cpp  player.cpp  player.h
data/: final.txt  gameInfo.txt
